[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-methods"
version = "0.1.0"
description = "A collection of Python methods"
authors = [
  { name="Your Name", email="[email protected]" }
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
]
