[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deriverative_valuation_5917487"
version = "0.1.0"
description = "A collection of Python methods"
authors = [
  { name="plato", email="spamemail2093411@gmail.com" }
]
requires-python = ">=3.11.2"
classifiers = [
  "Programming Language :: Python :: 3",
]
